Small refactors